<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="sistemas2014.unifebe.edu.br.emprestaai.Consultas.DetalheEmprestimo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="373dp"
        android:orientation="vertical"
        android:layout_weight="0.77">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtAmigo"
            android:hint="@string/person_name"
            android:enabled="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtItem"
            android:hint="@string/item"
            android:enabled="false" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/btnDelete"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
